bin/testsuite/tests/compiler/src/errors/compiler1328.swg
#global testerror "Err0192"

interface toto
{
    #[Swag.Offset("print1")]
    func print(me);
}
